--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
     flex-wrap: wrap;
 }
 .logo{
-    width: 140px;
+    width: 180px;
 
 }
 
@@ -102,6 +102,7 @@ border-radius: 15px;
 }
 
 .sub-title{
+    margin-bottom: 40px;
     font-size: 60px;
     font-weight: 600;
     color: #fff;
